More Perfect pixel +popup

--- a/bitrix/templates/main/1-0projects.html
+++ b/bitrix/templates/main/1-0projects.html
@@ -78,23 +78,22 @@
 					</div>
 					<div class="projects__container">
 						<div class="project__grid">
-							<div data-speed="15" class="projects-col interior parallax"><a href="" class="project__item pos-bottom"><span class="counter">54.</span></a>
-								<div class="project__media"><img src="img/projects/small.jpg" alt="" data-speed="15" data-direction="-1" class="parallax"></div>
-								<div class="project__name">
-									<div class="name"><span>woodtable</span></div>
-									<div class="category">interior design</div>
-								</div>
-							</div>
+							<div data-speed="15" class="projects-col interior parallax"><a href="" class="project__item pos-bottom">
+									<div class="project__media"><img src="img/projects/small.jpg" alt="" data-speed="15" data-direction="-1" class="parallax"></div>
+									<div class="project__name">
+										<div class="name"><span>woodtable</span></div>
+										<div class="category">interior design</div>
+									</div></a></div>
 							<div data-speed="25" class="projects-col design parallax"><a href="" class="project__item item__big">
 									<div class="project__media"><img src="img/projects/small.jpg" alt="" data-speed="15" data-direction="-1" class="parallax"></div>
 									<div class="project__name">
-										<div class="name"><span>Toilet in</span><span>the alfabank</span></div>
+										<div class="name"><span>Toilet in</span><br><span>the alfabank</span></div>
 										<div class="category">interior design</div>
 									</div></a></div>
 							<div data-speed="15" class="projects-col design parallax"><a href="" class="project__item pos-top">
 									<div class="project__media"><img src="img/projects/small.jpg" alt="" data-speed="15" data-direction="-1" class="parallax"></div>
 									<div class="project__name">
-										<div class="name"><span>Big brother</span><span>is watching you</span></div>
+										<div class="name"><span>Big brother</span><br><span>is watching you</span></div>
 										<div class="category">design design</div>
 									</div></a></div>
 							<div data-speed="25" class="projects-col interior parallax"><a href="" class="project__item pos-top">
@@ -112,7 +111,7 @@
 							<div data-speed="25" class="projects-col design parallax"><a href="" class="project__item item__big">
 									<div class="project__media"><img src="img/projects/small.jpg" alt="" data-speed="15" data-direction="-1" class="parallax"></div>
 									<div class="project__name">
-										<div class="name"><span>Toilet in</span><span>the alfabank</span></div>
+										<div class="name"><span>Toilet in</span><br><span>the alfabank</span></div>
 										<div class="category">interior design</div>
 									</div></a></div>
 						</div>
