--- a/bitrix/templates/main/2-0about.html
+++ b/bitrix/templates/main/2-0about.html
@@ -77,7 +77,7 @@
 							<div class="text text-first">
 								<p>Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic</p>
 							</div>
-							<div class="text text-second">
+							<div class="text">
 								<p>Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic is then transformed into reality. We decided to show you the process and filmed the creation of our office.</p>
 							</div>
 						</div>
