--- a/src/jade/2-0about.jade
+++ b/src/jade/2-0about.jade
@@ -31,7 +31,7 @@ head
               .text.text-first
                 p
                   |Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic
-              .text.text-second
+              .text
                 p
                   |Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic is then transformed into reality. We decided to show you the process and filmed the creation of our office.
             .product_selector-item.big-text
