--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -49,7 +49,7 @@ html
                       span 2015
                 .sq-carousel-item
                   .shader
-                    a.link-shader(href='1-0projects-inner')
+                    a.link-shader(href='3-0services.html')
                       | Penthouse Minsk3 
                       span 2015
                 .sq-carousel-item
