--- a/bitrix/templates/main/index.html
+++ b/bitrix/templates/main/index.html
@@ -96,7 +96,7 @@
 									<div class="shader"><a href="4-0designers.html" class="link-shader">Penthouse Minsk2 <span>2015</span></a></div>
 								</div>
 								<div class="sq-carousel-item">
-									<div class="shader"><a href="1-0projects-inner" class="link-shader">Penthouse Minsk3 <span>2015</span></a></div>
+									<div class="shader"><a href="3-0services.html" class="link-shader">Penthouse Minsk3 <span>2015</span></a></div>
 								</div>
 								<div class="sq-carousel-item">
 									<div class="shader"><a href="3-1services-inner.html" class="link-shader">Penthouse Minsk4 <span>2015</span></a></div>
